Project app {
  database_type: 'SQLite'
  note: 'ER diagram for CA2 of CS1116 Web Development, made by Paraic Kelly'
}

Table users {
  id integer [pk, increment]
  username varchar [not null, unique]
  password varchar [not null]
  permission_id integer [not null, default: 1] // 1 == USER

  records (id, username, password, permission_id) {
    1, 'ADMIN', 'password', 2
    2, 'EXAMPLE_USER', 'password', 1
  }
}

Table permissions {
    id integer [pk, increment]
    name varchar [not null, unique]

    records (id, name) {
        1, 'USER'
        2, 'ADMIN'
    }
}

Table levels {
  id integer [pk, increment]
  creator_id integer [not null]
  name varchar [not null, unique]
  floor varchar [not null]

  records (id, creator_id, name) {
      0, 1, "menu"
  }
}

ref: users.permission_id < permissions.id
ref: levels.creator_id > users.id